# Capstone-Audio2Text

./: .gitignore  AudioChunk.cpp  AudioChunk.h  AudioChunkFactory.cpp  AudioChunkFactory.h  CMakeLists.txt  Connection.cpp  Connection.hpp  Exception.hpp  FFMPEG.h  FFMPEG.hpp  HttpClient.cpp  HttpClient.hpp  HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp  SpeechDecoder.cpp  SpeechDecoder.hpp  Twitch.cpp  Twitch.hpp  TwitchStream.cpp  TwitchStream.hpp  TwitchStreamChunk.cpp  TwitchStreamChunk.hpp  TwitchStreamChunkFactory.cpp  TwitchStreamChunkFactory.hpp  TwitchStreamFactory.cpp  TwitchStreamFactory.hpp  TwitchStreamPlaylist.cpp  TwitchStreamPlaylist.hpp  TwitchStreamPlaylistFactory.cpp  TwitchStreamPlaylistFactory.hpp  Utilities.cpp  Utilities.hpp  main.cpp  prefix.hpp
cmake_modules/: FindFFMPEG.cmake
